# AMCA3D

./: CMakeLists.txt  README.md  configure.sh
CA/include/: CafeEnv.h  CafeMacro.h  CafeParsing.h  CafeSolver.h  CellularAutomataManager.h  CellularAutomataManager_2D.h  CellularAutomataManager_3D.h  CellularAutomataManager_3DRemelting.h  CellularAutomataSolver.h  Element.h  Envelope.h  FiniteElementManager.h  FiniteElementMethodSolver.h  Grain.h  Manager.h  MapVoxelManager.h  Node.h  Octahedron.h  Orientation.h  ParallelCommManager.h  ParallelCommManager_2D.h  ParallelCommManager_3D.h  ParsingHelper.h  ProblemPhysics.h  Simulation.h  Solver.h  TBCManager.h  TBCManagerDriver.h  ThermalBoundaryCondition.h  Timer.h  VtkManager.h  VtrBinManager.h  VtrBinXcaManager.h  VtrManager.h  VtuManager.h
CA/src/: Cafe.cpp  CafeEnv.cpp  CafeMacro.cpp  CafeParsing.cpp  CafeSolver.cpp  CellularAutomataManager.cpp  CellularAutomataManager_2D.cpp  CellularAutomataManager_3D.cpp  CellularAutomataManager_3DRemelting.cpp  CellularAutomataSolver.cpp  Element.cpp  Envelope.cpp  FiniteElementManager.cpp  FiniteElementMethodSolver.cpp  Grain.cpp  LoadDataFromFile.cpp  MapVoxelManager.cpp  Node.cpp  Octahedron.cpp  Orientation.cpp  ParallelCommManager.cpp  ParallelCommManager_2D.cpp  ParallelCommManager_3D.cpp  ProblemPhysics.cpp  Simulation.cpp  Solver.cpp  Timer.cpp  VtkManager.cpp  VtrManager.cpp  VtuManager.cpp  vtrBinManager.cpp
example/PBF_AM/PBF_x/: Inputfile.i  PBF_x.sh
example/PBF_AM/PBF_y/: Inputfile_0.i  Inputfile_1.i  PBF_y.sh
example/nucleation/: Inputfile.i  nucleation.sh
